Added front-end for New Itinerary Page

--- a/ios/TravelLogApp/Info.plist
+++ b/ios/TravelLogApp/Info.plist
@@ -75,6 +75,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Poppins-Bold.otf</string>
+		<string>Poppins-BoldItalic.otf</string>
 	</array>
 </dict>
 </plist>
