--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-action-button-warnings-fixed": "^2.9.2",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
