- Added log out confirmation - Added front end for Home Screen - Limited name field to 20 characters - Minor design changes for other screens

--- a/ios/TravelLogApp/Info.plist
+++ b/ios/TravelLogApp/Info.plist
@@ -77,6 +77,8 @@
 		<string>Zocial.ttf</string>
 		<string>Poppins-Bold.otf</string>
 		<string>Poppins-BoldItalic.otf</string>
+		<string>Poppins-ExtraBold.otf</string>
+		<string>Poppins-ExtraBoldItalic.otf</string>
 	</array>
 </dict>
 </plist>
