--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.1.3",
     "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/auth": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
@@ -24,6 +25,7 @@
     "react-native-action-button-warnings-fixed": "^2.9.2",
     "react-native-draggable-flatlist": "^3.1.1",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
