--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -268,6 +268,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     implementation platform('com.google.firebase:firebase-bom:30.0.2')
+    implementation project(':react-native-fs')
     
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
