--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-action-button-warnings-fixed": "^2.9.2",
+    "react-native-document-picker": "^8.1.1",
     "react-native-draggable-flatlist": "^3.1.1",
+    "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-safe-area-context": "^4.2.5",
