--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-action-button-warnings-fixed": "^2.9.2",
     "react-native-document-picker": "^8.1.1",
     "react-native-drag-sort": "^2.4.4",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-crop-picker": "^0.37.3",
