--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/stack": "^6.2.1",
     "formik": "^2.2.9",
     "react": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "^0.68.2",
     "react-native-action-button-warnings-fixed": "^2.9.2",
     "react-native-document-picker": "^8.1.1",
     "react-native-drag-sort": "^2.4.4",
@@ -30,7 +30,8 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-crop-picker": "^0.37.3",
-    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-modal-datetime-picker": "^10.2.0",
+    "react-native-openanything": "^0.0.6",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
