--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
     "@react-native-firebase/storage": "^14.11.0",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -32,11 +33,13 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-openanything": "^0.0.6",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-vector-icons": "^9.1.0",
     "yup": "^0.32.11"
   },
