added app icons, updated release build & readme

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -233,6 +233,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('TravelLog.keystore')
+            storePassword 'ERC11PM'
+            keyAlias 'TravelLogApp'
+            keyPassword 'ERC11PM'
+        }
     }
     buildTypes {
         debug {
@@ -244,6 +250,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
 
