--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-location": "^2.5.0",
+    "react-native-maps": "^0.31.1",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-openanything": "^0.0.6",
-    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-skeleton-placeholder": "^3.0.2",
