--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-maps": "^0.31.1",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-openanything": "^0.0.6",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-skeleton-placeholder": "^3.0.2",
