--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@react-native-firebase/firestore": "^14.11.0",
     "@react-native-firebase/storage": "^14.11.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
-    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
@@ -39,10 +40,12 @@
     "react-native-maps": "^0.31.1",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-openanything": "^0.0.6",
+    "react-native-pager-view": "^5.4.25",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-skeleton-placeholder": "^3.0.2",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "yup": "^0.32.11"
   },
