added accommodation recs and latitude&longitude for each respective location

--- a/ios/TravelLogApp/Info.plist
+++ b/ios/TravelLogApp/Info.plist
@@ -79,6 +79,7 @@
 		<string>Poppins-BoldItalic.otf</string>
 		<string>Poppins-ExtraBold.otf</string>
 		<string>Poppins-ExtraBoldItalic.otf</string>
+		<string>Symbola.ttf</string>
 	</array>
 </dict>
 </plist>
