--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,9 @@
 title: Travel Log
 markdown: kramdown
 remote_theme: just-the-docs/just-the-docs
+search_enabled: true
+search.heading_level: 2
+search.previews: 3
+search.preview_words_before: 5
+search.preview_words_after: 10
+search.tokenizer_separator: /[\s/]+/
