Update _config.yml to include logo in GH pages

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,4 +8,4 @@ search.previews: 3
 search.preview_words_before: 5
 search.preview_words_after: 10
 search.tokenizer_separator: /[\s/]+/
-logo: "https://github.com/melissaharijanto/Travel-Log/blob/main/assets/images/logo2.png"
+logo: "../assets/images/logo2.png"
