--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,3 +8,4 @@ search.previews: 3
 search.preview_words_before: 5
 search.preview_words_after: 10
 search.tokenizer_separator: /[\s/]+/
+color_scheme: color_scheme
