--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Build settings
 title: Travel Log
 markdown: kramdown
-color_scheme: colors.scss
+color_scheme: colors
 remote_theme: just-the-docs/just-the-docs
 search_enabled: true
 search.heading_level: 2
