--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,6 @@
 # Build settings
 title: Travel Log
 markdown: kramdown
-color_scheme: colors
 remote_theme: just-the-docs/just-the-docs
 search_enabled: true
 search.heading_level: 2
@@ -9,3 +8,5 @@ search.previews: 3
 search.preview_words_before: 5
 search.preview_words_after: 10
 search.tokenizer_separator: /[\s/]+/
+color_scheme: colors
+logo: "./images/logo2.png""
