--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,10 +3,31 @@ title: Travel Log
 markdown: kramdown
 remote_theme: just-the-docs/just-the-docs
 search_enabled: true
-search.heading_level: 2
-search.previews: 3
-search.preview_words_before: 5
-search.preview_words_after: 10
-search.tokenizer_separator: /[\s/]+/
+search_enabled: true
+
+search:
+  heading_level: 2
+  previews: 3
+  preview_words_before: 5
+  preview_words_after: 10
+  tokenizer_separator: /[\s/]+/
+  rel_url: true
+  button: false
 color_scheme: colors
 logo: "./images/logo3.png"
+
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: #52a8a3
+  warning:
+    title: Warning
+    color: red
